# clip2cook

./: .gitignore  app.json  commit.txt  package-lock.json  package.json
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  parse.py  routes.py
backend/app/schemas/: __init__.py  recipe.py
backend/app/services/: __init__.py  ai_gemini.py  ai_whisper.py  scraper.py  youtube.py
frontend/: README.md  app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  add-recipe.tsx  view-recipe.tsx
frontend/app/(tabs)/: _layout.tsx  create.tsx  index.tsx  saved.tsx
frontend/components/: custom-text.tsx  recipe-form.tsx  recipe-video-player.tsx  recipe-view.tsx
frontend/components/ui/: icon-symbol.tsx
frontend/utils/: supabase.ts
