[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "google-genai>=2.11.0",
    "google-generativeai>=0.8.6",
    "groq>=1.5.0",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.7.4",
]
